extern/PICM114GL/include/MNet_M204.h

//
// Initial
I16 PASCAL _mnet_m204_initial( U16 RingNo, U16 SlaveIP );
//
// Pulse I/O Configuration
I16 PASCAL _mnet_m204_set_pls_outmode( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 pls_outmode );
I16 PASCAL _mnet_m204_set_pls_iptmode( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 pls_iptmode, U16 pls_iptdir );
I16 PASCAL _mnet_m204_set_feedback_src( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 FbkSrc );
I16 PASCAL _mnet_m204_set_abs_reference(U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 Ref);
//
// Interface I/O Configuration
I16 PASCAL _mnet_m204_set_alm( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 alm_logic, U16 alm_mode );
I16 PASCAL _mnet_m204_set_inp( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 inp_enable, U16 inp_logic );
I16 PASCAL _mnet_m204_set_erc( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 erc_logic, U16 erc_on_time, U16 erc_off_time );
I16 PASCAL _mnet_m204_set_erc_on( U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 on_off );
I16 PASCAL _mnet_m204_set_sd( U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 sd_enable, I16 sd_logic, I16 sd_latch, I16 sd_mode );
I16 PASCAL _mnet_m204_set_svon( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 on_off );
I16 PASCAL _mnet_m204_set_ralm( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 on_off );
I16 PASCAL _mnet_m204_set_ltc_logic( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 ltc_logic );
I16 PASCAL _mnet_m204_set_el( U16 RingNo, U16 SlaveIP, U16 AxisNo, I16 el_mode, I16 el_logic );
// Status
I16 PASCAL _mnet_m204_get_io_status( U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 *io_sts );
//
// Velocity Control
I16 PASCAL _mnet_m204_tv_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc );
I16 PASCAL _mnet_m204_sv_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 SVacc );
I16 PASCAL _mnet_m204_v_change( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 NewVel, F64 Time );
I16 PASCAL _mnet_m204_cmp_v_change( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Res_Dist, F64 OldVel, F64 NewVel, F64 Time );
I16 PASCAL _mnet_m204_fix_speed_range( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 MaxVel );
I16 PASCAL _mnet_m204_unfix_speed_range( U16 RingNo, U16 SlaveIP, U16 AxisNo );
//
// Position Control
I16 PASCAL _mnet_m204_start_tr_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_ta_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_sr_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
I16 PASCAL _mnet_m204_start_sa_move( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
//
I16 PASCAL _mnet_m204_start_tr_line2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_ta_line2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_sr_line2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
I16 PASCAL _mnet_m204_start_sa_line2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
//
I16 PASCAL _mnet_m204_start_tr_line3( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 DistX, F64 DistY, F64 DistZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_ta_line3( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 PosX, F64 PosY, F64 PosZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_sr_line3( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 DistX, F64 DistY, F64 DistZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
I16 PASCAL _mnet_m204_start_sa_line3( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 PosX, F64 PosY, F64 PosZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
//
I16 PASCAL _mnet_m204_start_tr_line4( U16 RingNo, U16 SlaveIP, F64 DistX, F64 DistY, F64 DistZ, F64 DistU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_ta_line4( U16 RingNo, U16 SlaveIP, F64 PosX, F64 PosY, F64 PosZ, F64 PosU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_sr_line4( U16 RingNo, U16 SlaveIP, F64 DistX, F64 DistY, F64 DistZ, F64 DistU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
I16 PASCAL _mnet_m204_start_sa_line4( U16 RingNo, U16 SlaveIP, F64 PosX, F64 PosY, F64 PosZ, F64 PosU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
//
I16 PASCAL _mnet_m204_start_tr_arc2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_ta_arc2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_sr_arc2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
I16 PASCAL _mnet_m204_start_sa_arc2( U16 RingNo, U16 SlaveIP, I16 *AxisArray, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
//
I16 PASCAL _mnet_m204_start_tr_arc_xyz( U16 RingNo, U16 SlaveIP, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, F64 DistZ, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_ta_arc_xyz( U16 RingNo, U16 SlaveIP, F64 Cx, F64 Cy, F64 Ex, F64 Ey, F64 PosZ, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec );
I16 PASCAL _mnet_m204_start_sr_arc_xyz( U16 RingNo, U16 SlaveIP, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, F64 DistZ, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
I16 PASCAL _mnet_m204_start_sa_arc_xyz( U16 RingNo, U16 SlaveIP, F64 Cx, F64 Cy, F64 Ex, F64 Ey, F64 PosZ, I16 DIR, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec );
//
I16 PASCAL _mnet_m204_tr_move_after_axis(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 LeadingAxes, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 PASCAL _mnet_m204_ta_move_after_axis(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 LeadingAxes, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 PASCAL _mnet_m204_sr_move_after_axis(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 LeadingAxes, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 PASCAL _mnet_m204_sa_move_after_axis(U16 RingNo, U16 SlaveIP, U16 AxisNo, U16 LeadingAxes, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
//
// Stop
I16 PASCAL _mnet_m204_sd_stop( U16 RingNo, U16 SlaveIP, U16 AxisNo, F64 Tdec );
I16 PASCAL _mnet_m204_emg_stop( U16 RingNo, U16 SlaveIP, U16 AxisNo );