extern/PICM114GL/include/MNet_M204.cs

        
        public class M204
        {
            ////////////////////////////////////////////////////////////////////////////////
            /////////////////////////                            ///////////////////////////
            ///////////////////////// 4-Axis Motion Slaves(M204) ///////////////////////////
            /////////////////////////                            ///////////////////////////
            ////////////////////////////////////////////////////////////////////////////////
            //
            // Initial
            [DllImport(DLLName)]
            public static extern short _mnet_m204_initial(ushort RingNo, ushort SlaveIP);
            //
            // Pulse I/O Configuration
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_pls_outmode(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort pls_outmode);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_pls_iptmode(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort pls_iptmode, ushort pls_iptdir);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_feedback_src(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort FbkSrc);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_abs_reference(ushort RingNo, ushort SlaveIP, ushort AxisNo, short Ref);
            //
            // Interface I/O Configuration
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_alm(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort alm_logic, ushort alm_mode);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_inp(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort inp_enable, ushort inp_logic);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_erc(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort erc_logic, ushort erc_on_time, ushort erc_off_time);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_erc_on(ushort RingNo, ushort SlaveIP, ushort AxisNo, short on_off);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_sd(ushort RingNo, ushort SlaveIP, ushort AxisNo, short sd_enable, short sd_logic, short sd_latch, short sd_mode);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_svon(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort on_off);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_ralm(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort on_off);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_ltc_logic(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort ltc_logic);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_set_el(ushort RingNo, ushort SlaveIP, ushort AxisNo, short el_mode, short el_logic);
            // I/O Status
            [DllImport(DLLName)]
            public static extern short _mnet_m204_get_io_status(ushort RingNo, ushort SlaveIP, ushort AxisNo, ref ushort io_sts);
            //
            // Velocity Control
            [DllImport(DLLName)]
            public static extern short _mnet_m204_tv_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double StrVel, double MaxVel, double Tacc);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_sv_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double StrVel, double MaxVel, double Tacc, double SVacc);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_v_change(ushort RingNo, ushort SlaveIP, ushort AxisNo, double NewVel, double Time);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_cmp_v_change(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Res_Dist, double OldVel, double NewVel, double Time);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_fix_speed_range(ushort RingNo, ushort SlaveIP, ushort AxisNo, double MaxVel);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_unfix_speed_range(ushort RingNo, ushort SlaveIP, ushort AxisNo);
            //
            // Position Control
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_tr_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Dist, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_ta_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Pos, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sr_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Dist, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sa_move(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Pos, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_tr_line2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double DistX, double DistY, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_ta_line2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double PosX, double PosY, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sr_line2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double DistX, double DistY, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sa_line2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double PosX, double PosY, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_tr_line3(ushort RingNo, ushort SlaveIP, short[] AxisArray, double DistX, double DistY, double DistZ, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_ta_line3(ushort RingNo, ushort SlaveIP, short[] AxisArray, double PosX, double PosY, double PosZ, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sr_line3(ushort RingNo, ushort SlaveIP, short[] AxisArray, double DistX, double DistY, double DistZ, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sa_line3(ushort RingNo, ushort SlaveIP, short[] AxisArray, double PosX, double PosY, double PosZ, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_tr_line4(ushort RingNo, ushort SlaveIP, double DistX, double DistY, double DistZ, double DistU, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_ta_line4(ushort RingNo, ushort SlaveIP, double PosX, double PosY, double PosZ, double PosU, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sr_line4(ushort RingNo, ushort SlaveIP, double DistX, double DistY, double DistZ, double DistU, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sa_line4(ushort RingNo, ushort SlaveIP, double PosX, double PosY, double PosZ, double PosU, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_tr_arc2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double OffsetCx, double OffsetCy, double OffsetEx, double OffsetEy, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_ta_arc2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double Cx, double Cy, double Ex, double Ey, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sr_arc2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double OffsetCx, double OffsetCy, double OffsetEx, double OffsetEy, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sa_arc2(ushort RingNo, ushort SlaveIP, short[] AxisArray, double Cx, double Cy, double Ex, double Ey, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_tr_arc_xyz(ushort RingNo, ushort SlaveIP, double OffsetCx, double OffsetCy, double OffsetEx, double OffsetEy, double DistZ, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_ta_arc_xyz(ushort RingNo, ushort SlaveIP, double Cx, double Cy, double Ex, double Ey, double PosZ, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sr_arc_xyz(ushort RingNo, ushort SlaveIP, double OffsetCx, double OffsetCy, double OffsetEx, double OffsetEy, double DistZ, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_start_sa_arc_xyz(ushort RingNo, ushort SlaveIP, double Cx, double Cy, double Ex, double Ey, double PosZ, short DIR, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            [DllImport(DLLName)]
            public static extern short _mnet_m204_tr_move_after_axis(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort LeadingAxes, double Dist, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_ta_move_after_axis(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort LeadingAxes, double Pos, double StrVel, double MaxVel, double Tacc, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_sr_move_after_axis(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort LeadingAxes, double Dist, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_sa_move_after_axis(ushort RingNo, ushort SlaveIP, ushort AxisNo, ushort LeadingAxes, double Pos, double StrVel, double MaxVel, double Tacc, double Tdec, double SVacc, double SVdec);
            //
            // Stop
            [DllImport(DLLName)]
            public static extern short _mnet_m204_sd_stop(ushort RingNo, ushort SlaveIP, ushort AxisNo, double Tdec);
            [DllImport(DLLName)]
            public static extern short _mnet_m204_emg_stop(ushort RingNo, ushort SlaveIP, ushort AxisNo);
